--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,9 @@
+/*
+  import every file in the same directory,
+  including within folders
+  
+ */
 body {
   font-family: sans-serif;
-  font-size: 30px;
+  font-size: 29px;
 }
