--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -1,3 +1,6 @@
-body
-  font-family sans-serif
-  font-size 25px
+/*
+  import every file in the same directory,
+  including within folders
+  
+ */
+@import './**/!(styles)*.styl'
