--- a/src/jade/wrapper.jade
+++ b/src/jade/wrapper.jade
@@ -9,6 +9,7 @@ html(lang="en-us")
     meta(property="og:type" content="website")
     meta(property="og:url" content="http://bierha.us")
     meta(property="og:image" content="http://bierha.us/wide.jpg")
+    script(src="/bundle.js")
     if devMode
       link(rel="stylesheet" href="/styles.css")
     //- if !devMode
