--- a/src/jade/home.jade
+++ b/src/jade/home.jade
@@ -1,4 +1,58 @@
 extends wrapper
 
 block content
-  h1 Site Title
+  div.home
+    header.header
+      h1 Just Enough Photo Method
+    
+    section.pitch
+      p.tagline 
+        | Train your front & back-of-house to take great photos &
+        | Sell more food. </br>
+        a(href="#") *time & money back guarantee.
+      a.workshop-button(href="/#workshop")
+        span.text Reserve a Workshop Seat
+      
+    
+    div.cover
+      div.hero-bts-wrapper
+        img.hero-bts(src="http://res.cloudinary.com/dk0rh65wd/image/upload/c_scale,w_1200/v1468186573/worshop/hero-bts_nb4xpe.jpg")
+        span.method
+          | Kitchen,<br/>Smart Phone<br/>& Butcher's Paper
+      div
+        img.hero(src="http://res.cloudinary.com/dk0rh65wd/image/upload/v1468186578/worshop/hero_ozmbt5.jpg")    
+      
+    
+    
+    ul
+      li You already present food to customers.
+      li Almost everyone has a smart phone with a decent camera.
+
+    div.case-study
+      h2 A Case Study 
+      article.domingos-case
+        h3 Domingo's Italian Deli
+        
+        div.dom-customer
+          img(src="http://res.cloudinary.com/dk0rh65wd/image/upload/c_scale,w_2048/v1468186573/worshop/dom-customer_isrxb7.jpg")
+        
+        p We sold Salads & Pizzas that were rarely
+          | ordered off a text menu. We now invent new sandwiches,
+          | take photos and sell it in a day.
+          
+        hr.clear
+    
+    div.workshop-content
+      h2 What You Get From The Workshop
+      
+      p First, Patil will show you how to use common kitchen materials to
+        | build a mini-set and frame the photo with a smart phone.
+      
+      p Cinzia & Sergio will show you tips and tricks of presenting food
+      
+      p Dan will set up an iPad menu for your team to put photos onto.
+      
+      p Lastly, Patil wills show you how to motivate staff.
+      
+    div.register
+      
