--- a/src/stylus/_body.styl
+++ b/src/stylus/_body.styl
@@ -3,5 +3,18 @@
 global-reset()
 
 body
-  font-family: sans-serif;
+  color: $black
+  background: $white
+  font-family: "brandon-grotesque", sans-serif;
   font-size: 29px;
+a
+  color: $clickable
+
+img
+  width: 100%
+
+hr.clear
+  margin 0
+  padding: 0
+  visibility: hidden;
+  clear both
