--- a/src/jade/home.jade
+++ b/src/jade/home.jade
@@ -3,7 +3,7 @@ extends wrapper
 block content
   div.home
     header.header
-      h1 Just Enough Photo Method
+      h1 Photos Forever Workshop
     
     section.pitch
       p.tagline 
@@ -23,10 +23,10 @@ block content
         img.hero(src="http://res.cloudinary.com/dk0rh65wd/image/upload/v1468186578/worshop/hero_ozmbt5.jpg")    
       
     
-    
-    ul
-      li You already present food to customers.
-      li Almost everyone has a smart phone with a decent camera.
+    div.pitch-secondary
+      ul
+        li You already present food to customers.
+        li Almost everyone has a smart phone with a decent camera.
 
     div.case-study
       h2 A Case Study 
@@ -43,16 +43,43 @@ block content
         hr.clear
     
     div.workshop-content
-      h2 What You Get From The Workshop
+      h2 What Our Mentors Will Teach You
       
-      p First, Patil will show you how to use common kitchen materials to
-        | build a mini-set and frame the photo with a smart phone.
+      p.activity
+        span.avatar
+          img(src="https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg")
+        span.text <strong>Patil</strong> will help you find the best lighting in your restaurant,
+          | scourage availabe kitchen items to build a mini photo-set. Also the art of naming.
       
-      p Cinzia & Sergio will show you tips and tricks of presenting food
+      p.activity
+        span.avatar
+          img(src="http://res.cloudinary.com/dk0rh65wd/image/upload/c_scale,w_600/v1468263936/worshop/cinzia.jpg")
+        span.text <strong>Cinzia</strong> will teach you how to choreograph food for photography
+          | without creating a false impression of what the food will look like.
       
-      p Dan will set up an iPad menu for your team to put photos onto.
+      p.activity
+        span.avatar
+          img(src="http://res.cloudinary.com/dk0rh65wd/image/upload/c_scale,w_600/v1468263936/worshop/sergio.jpg")
+        span.text <strong>Sergio</strong> will show you food-presentaion tricks of his own. Also how to present the photos to the customer,
+          | and how to get the correct feedback from them.
       
-      p Lastly, Patil wills show you how to motivate staff.
+      p.activity
+        span.avatar
+          img(src="http://res.cloudinary.com/dk0rh65wd/image/upload/c_scale,w_600/v1468254598/worshop/dan.jpg")
+        span.text <strong>Dan</strong> will set up an iPad menu for your team to put photos onto.
+          | Also how to organize and categorize in Airtable so to get the iPad menu exactly right.
       
     div.register
+      h2.header Workshops
+      div.workshop-cover
+        ul.info 
+          li.city Los Angeles
+          li.time Monday, July 25th, 2016
+          li.loc Domingo's Italian Deli
       
+      ul.options
+        li You + 2 employees (Early Bird) $449
+        li Bring an owner friend + 4 employees (Early Bird) $399
+        li You + 2 employees (At the door) $499
+    
+    
