--- a/src/stylus/_body.styl
+++ b/src/stylus/_body.styl
@@ -18,3 +18,18 @@ hr.clear
   padding: 0
   visibility: hidden;
   clear both
+
+input
+  font: inherit;
+  background: none
+  -webkit-border-radius 0 // remove iOS input box rounded  corners
+  -webkit-appearance none // allow for custom inner box-shadow
+
+button
+  font-family: inherit;
+  font-size: inherit
+  background: $white
+  border none
+  border 1px solid #333
+  border-radius: 5px
+  line-height: 1.5em
