--- a/src/stylus/_home.styl
+++ b/src/stylus/_home.styl
@@ -3,10 +3,11 @@
     line-height: 1.5em
   p, ul, ol
     margin 0.8em 0.8em
-  li
-    list-style: disc;
-  ul
-    padding-left: 1em
+  .pitch-secondary
+    li
+      list-style: disc;
+    ul
+      padding-left: 1em
   .header
     font-weight: 600
 
@@ -83,7 +84,7 @@
   h3
     font-size: 11.5vw
   p
-    font-size: 5.5vw
+    font-size: 5.4vw
     margin 0 0.2em
     &::first-letter
       font-size: 2em
@@ -95,9 +96,3 @@
     display: inline;
     float: left
     width: 100%
-
-.workshop-content
-  h2
-    text-align: center;
-    font-size: 6vw
-    margin 1em 0
